# fused-transpose

./: CMakeLists.txt  main.cpp  readme.md  run.sh  transpose_inplace_tiled_simd.cpp
analysis/: transpose_inplace_tiled_simd.ll  transpose_inplace_tiled_simd.s  transpose_inplace_tiled_simd_mca.txt
utils/: perf_kernel.cpp  time_kernel.cpp
